# organize-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
organize/: __init__.py  cli.py  core.py  filetypes.py  restore.py
tests/: __init__.py  test_cli.py  test_core.py  test_edge_cases.py  test_restore.py
